src/test/deca/context/invalid/object/bad-param.deca
// Description :
//  Test constructeur avec un mauvais type de paramètre.
// Résultats :
//    Erreur : Aucun constructeur trouvé pour les arguments (String).
// Historique :
//    créé le 19/01/2025
class Point {
    int x, y;

    Point(int x, int y) {
        this.x = x;
        this.y = y;
    }
}

{
    Point p = new Point("invalid", "parameters"); 
}
